# QT-Animated-Switch

./: .gitignore  CMakeLists.txt  README.md
CustomSwitch/: CMakeLists.txt  ToggleSwitch.cpp  ToggleSwitch.h  ToggleSwitch.hpp  ToggleSwitchAPI.h  ToggleSwitchPlugin.cpp  ToggleSwitchPlugin.h  ToggleSwitchPlugin.json  res.qrc
CustomSwitch/res/: ToggleSwitch.xml
forms/TestWindow/: TestWindow.ui
include/CustomSwitch/: ToggleSwitch.hpp
include/TestWindow/: TestWindow.h
resources/: Switch.qrc
resources/style/: Switch.qss
src/: main.cpp
src/TestWindow/: TestWindow.cpp
